--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,28 @@
-Pillow
-PyYAML
-easydict
+Django==1.11.6
+Pillow==4.3.0
+PyYAML==3.12
+Theano==0.9.0
+easydict==1.7
+enum34==1.1.6
 fuel==0.2.0
+funcsigs==1.0.2
 h5py==2.7.1
+image==1.5.16
 ipdb
 ipython
 jupyter
-pandas
-prettytensor
-progressbar2
+mock==2.0.0
+nltk==3.2.5
+numpy==1.13.3
+olefile==0.44
+pandas==0.20.3
+pbr==3.1.1
+prettytensor==0.7.4
+progressbar==2.3
+protobuf==3.4.0
+python-dateutil==2.6.1
 python_dateutil
-six
-torchfile
+pytz==2017.2
+scipy==0.19.1
+six==1.11.0
+torchfile==0.1.0
