fixed bug with host/docker paths

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-keras==2.0.8
+ipdb
+ipython
+jupyter
 Django==1.11.6
 Pillow==4.3.0
 PyYAML==3.12
 Theano==0.9.0
+docopt==0.6.2
 easydict==1.7
 enum34==1.1.6
 fuel==0.2.0
 funcsigs==1.0.2
 h5py==2.7.1
 image==1.5.16
-ipdb
-ipython
-jupyter
+keras==2.0.8
 mock==2.0.0
 nltk==3.2.5
 numpy==1.13.3
