--- a/stageI/cfg/birds.yml
+++ b/stageI/cfg/birds.yml
@@ -1,7 +1,7 @@
 CONFIG_NAME: 'stageI'
 
 DATASET_NAME: 'birds'
-EMBEDDING_TYPE: 'custom'
+EMBEDDING_FILENAME: '/custom-embeddings.pickle'
 GPU_ID: 0
 Z_DIM: 100
 
