--- a/stageI/cfg/flowers.yml
+++ b/stageI/cfg/flowers.yml
@@ -1,7 +1,7 @@
 CONFIG_NAME: 'stageI'
 
 DATASET_NAME: 'flowers'
-EMBEDDING_TYPE: 'cnn-rnn'
+EMBEDDING_FILENAME: '/char-CNN-RNN-embeddings.pickle'
 GPU_ID: 0
 Z_DIM: 100
 
