--- a/stageI/cfg/flowers.yml
+++ b/stageI/cfg/flowers.yml
@@ -4,6 +4,7 @@ DATASET_NAME: 'flowers'
 EMBEDDING_FILENAME: '/char-CNN-RNN-embeddings.pickle'
 GPU_ID: 0
 Z_DIM: 100
+HR_LR_RATIO: 1
 
 TRAIN:
     FLAG: True
