--- a/stageI/cfg/fashion.yml
+++ b/stageI/cfg/fashion.yml
@@ -1,7 +1,7 @@
 CONFIG_NAME: 'stageI'
 
 DATASET_NAME: 'fashion'
-DATASET_TYPE: 'StreamingDataset'
+DATASET_TYPE: 'TextDataset'
 EMBEDDING_FILENAME: '/custom-embeddings.pickle'
 GPU_ID: 0
 Z_DIM: 100
