--- a/stageI/cfg/fashion-hdf5.yml
+++ b/stageI/cfg/fashion-hdf5.yml
@@ -1,6 +1,7 @@
 CONFIG_NAME: 'stageI'
 
 DATASET_NAME: 'fashion'
+DATASET_TYPE: 'StreamingDataset'
 EMBEDDING_FILENAME: '/custom-embeddings.pickle'
 GPU_ID: 0
 Z_DIM: 100
