--- a/stageII/cfg/fashion-hdf5.yml
+++ b/stageII/cfg/fashion-hdf5.yml
@@ -1,21 +1,23 @@
-CONFIG_NAME: 'stageI'
+CONFIG_NAME: 'stageII'
 
 DATASET_NAME: 'fashion'
+DATASET_TYPE: 'StreamingDataset'
 EMBEDDING_FILENAME: '/custom-embeddings.pickle'
 GPU_ID: 0
 Z_DIM: 100
-HR_LR_RATIO: 1
+HR_LR_RATIO: 4
 
 TRAIN:
     FLAG: True
-    PRETRAINED_MODEL: ''
+    PRETRAINED_MODEL: './ckt_logs/fashion/stageI/model_64000.ckpt'
+    PRETRAINED_EPOCH: 600
     BATCH_SIZE: 64
     NUM_COPY: 4
-    MAX_EPOCH: 600
+    MAX_EPOCH: 1200
     SNAPSHOT_INTERVAL: 2000
     DISCRIMINATOR_LR: 0.0002
     GENERATOR_LR: 0.0002
-    LR_DECAY_EPOCH: 50
+    LR_DECAY_EPOCH: 100
     NUM_EMBEDDING: 4
     COEFF:
       KL: 2.0
@@ -24,4 +26,3 @@ GAN:
     EMBEDDING_DIM: 128
     DF_DIM: 64
     GF_DIM: 128
-
