fixed lot of stupid typos

--- a/stageI/cfg/fashion.yml
+++ b/stageI/cfg/fashion.yml
@@ -1,7 +1,7 @@
 CONFIG_NAME: 'stageI'
 
 DATASET_NAME: 'fashion'
-EMBEDDING_FILENAME: '/custom_embeddings.pickle'
+EMBEDDING_FILENAME: 'custom_embeddings.pickle'
 GPU_ID: 0
 Z_DIM: 100
 HR_LR_RATIO: 1
