--- a/stageII/cfg/fashion.yml
+++ b/stageII/cfg/fashion.yml
@@ -1,14 +1,14 @@
 CONFIG_NAME: 'stageII'
 
 DATASET_NAME: 'fashion'
-EMBEDDING_FILENAME: '/custom-embeddings.pickle'
+EMBEDDING_FILENAME: 'custom_embeddings.pickle'
 GPU_ID: 0
 Z_DIM: 100
 HR_LR_RATIO: 4
 
 TRAIN:
     FLAG: True
-    PRETRAINED_MODEL: './ckt_logs/fashion/stageI/model_290000.ckpt'
+    PRETRAINED_MODEL: './ckt_logs/fashion/stageI_2018_03_08_00_07_00/model_92000.ckpt'
     PRETRAINED_EPOCH: 100
     BATCH_SIZE: 64
     NUM_COPY: 4
