--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Theano==0.9.0
 docopt==0.6.2
 easydict==1.7
 enum34==1.1.6
+flask==0.12.2
 fuel==0.2.0
 funcsigs==1.0.2
 h5py==2.7.1
@@ -24,6 +25,7 @@ progressbar==2.3
 protobuf==3.4.0
 python-dateutil==2.6.1
 pytz==2017.2
+scikit-image==0.13.1
 scipy==0.19.1
 six==1.11.0
 torchfile==0.1.0
