--- a/demo/cfg/fashion-demo.yml
+++ b/demo/cfg/fashion-demo.yml
@@ -5,7 +5,7 @@ GPU_ID: 0
 Z_DIM: 100
 
 TEST:
-    PRETRAINED_MODEL: './ckt_logs/fashion/stageII/model_172000.ckpt'
+    PRETRAINED_MODEL: '/models/fashion/stageII/model.ckpt'
     BATCH_SIZE: 64
     NUM_COPY: 8
 
